# cloud-orchestrator

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  Dockerfile.agent  Dockerfile.brain  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.agent.txt  requirements.brain.txt
agent/: __init__.py  agent.py  config.py  docker_manager.py  gpu_detector.py  install.sh  system_info.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py
brain/: __init__.py  config.py  main.py
brain/adapters/: __init__.py  base.py
brain/adapters/lambda_labs/: __init__.py  client.py  mock.py  (+1 more)
brain/middleware/: __init__.py  rate_limit.py  security.py
brain/models/: __init__.py  api_key.py  base.py  billing.py  model_catalog.py  node.py  pod.py  provider.py  provisioned_instance.py  user.py
brain/routes/: __init__.py  admin.py  api_keys.py  auth.py  billing.py  dashboard.py  models.py  nodes.py  pods.py  providers.py  proxy.py  users.py  websocket.py
brain/scripts/: __init__.py  seed_model_catalog.py
brain/services/: __init__.py  email.py  model_deployment.py  model_proxy.py  multi_provider.py  payouts.py  provisioning.py  sourcing.py  stripe_billing.py
brain/tasks/: __init__.py  billing.py  celery_app.py  health.py  model_health.py  sourcing.py
docs/: PRODUCTION_CHECKLIST.md  PRODUCTION_DEPLOYMENT.md  USER_SERVICE_DESIGN.md
shared/: __init__.py  schemas.py
tests/: __init__.py  conftest.py
tests/adapters/: test_lambda_labs.py  test_runpod.py  test_vast_ai.py
tests/services/: test_multi_provider.py
(+8 files in other folders)
